--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/logo.jpg" alt="" /></span>
 					<p>Voor iedereen<br />
 					die wil groeien</p>
 				</header>
