--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Wildgroei coaching</title>
+		<title>Wildgroei</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,16 +16,17 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/logo.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/logo.jpg" alt="Wildgroei logo" /></span>
 					<p>Voor iedereen<br />
 					die wil groeien</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#one" class="active">In 't kort</a></li>
+						<li><a href="#two">Voor wie?</a></li>
+						<li><a href="#three">Waarom Wildgroei?</a></li>
+						<li><a href="#four">Verloop</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
