--- a/index.html
+++ b/index.html
@@ -16,26 +16,24 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/logo.jpg" alt="Wildgroei logo" /></span>
+					<span class="image avatar"><img src="images/logo.jpg" alt="logo" /></span>
 					<p>Voor iedereen<br />
 					die wil groeien</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">In 't kort</a></li>
-						<li><a href="#two">Voor wie?</a></li>
-						<li><a href="#three">Waarom Wildgroei?</a></li>
-						<li><a href="#four">Verloop</a></li>
-						<li><a href="#five">Contact</a></li>
+						<li><a href="#one" class="active">IN 'T KORT</a></li>
+						<li><a href="#two">VOOR WIE?</a></li>
+						<li><a href="#three">WAAROM WILDGROEI?</a></li>
+						<li><a href="#four">VERLOOP</a></li>
+						<li><a href="#five">CONTACT</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="tel:+324725768" class="icon fas fa-phone"><span class="label">Telefoon</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:wildgroeicoaching@gmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
 					</ul>
 				</footer>
 			</section>
