--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="tel:+324725768" class="icon fas fa-phone"><span class="label">Telefoon</span></a></li>
+						<li><a href="tel:+324725768" class="icon fa-phone"><span class="label">Telefoon</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:wildgroeicoaching@gmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
 					</ul>
