--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>IN 'T KORT</h2>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Als kind spelen we vaak, in het wild, en hebben we weinig tot geen zorgen. Met ouder worden temmen we onszelf en staan we vaker stil bij wat op ons pad komt. We verliezen onszelf in dingen die ons zorgen baren, dilemma’s die ons voor moeilijke keuzes zetten, zaken die ons uitdagen en soms vastzetten. Wildgroei, dat is samen op pad gaan. Op zoek naar een alternatieve route. Wildgroei ondersteunt je om jezelf terug te vinden zodat je vrij, af en toe wild, maar warm en vanuit het hart kan ontdekken waar jouw speelruimte ligt en je kan groeien in het leven. </p>
 								</div>
 							</section>
 
