--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">IN 'T KORT</a></li>
-						<li><a href="#two">VOOR WIE?</a></li>
-						<li><a href="#three">WAAROM WILDGROEI?</a></li>
-						<li><a href="#four">VERLOOP</a></li>
-						<li><a href="#five">CONTACT</a></li>
+						<li><a href="#intkort" class="active">IN 'T KORT</a></li>
+						<li><a href="#voorwie">VOOR WIE?</a></li>
+						<li><a href="#waaromwildgroei">WAAROM WILDGROEI?</a></li>
+						<li><a href="#verloop">VERLOOP</a></li>
+						<li><a href="#contact">CONTACT</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -44,7 +44,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="intkort">
 								<div class="container">
 									<header class="major">
 										<h3>IN 'T KORT</h3>
@@ -54,7 +54,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="voorwie">
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -70,7 +70,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="waaromwildgroei">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -101,7 +101,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="verloop">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -124,7 +124,7 @@
 
 						<!-- Five -->
 						<!--
-							<section id="five">
+							<section id="contact">
 								<div class="container">
 									<h3>Elements</h3>
 
