--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 									<h3>VOOR WIE?</h3>
 									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast en energie. Voor iedereen die graag verandering wil in het leven.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Vastzitten in een patroon en daaruit willen breken.</li>
-										<li class="icon solid fa-cubes">Anders leren omgaan met stress.</li>
-										<li class="icon solid fa-book">Merken dat bepaalde emoties te vaak de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
+										<li class="icon solid fa-th-large">Vastzitten in een patroon en daaruit willen breken.</li>
+										<li class="icon solid fa-laptop-house">Anders leren omgaan met stress.</li>
+										<li class="icon solid fa-tired">Merken dat bepaalde emoties te vaak de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
 										<li class="icon solid fa-coffee">De verhouding tussen werk en privé onder de loep nemen en over een andere boeg gooien.</li>
 										<li class="icon solid fa-bolt">Weten dat je ergens anders heen wilt, maar (nog) niet goed weten waar of wat dat precies is.</li>
 										<li class="icon solid fa-users">Beter/anders willen samenwerken met je collega’s.</li>
