--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<li class="icon solid fa-route">Vastzitten in een patroon en daaruit willen breken.</li>
 										<li class="icon solid fa-balance-scale-right">Anders leren omgaan met stress.</li>
 										<li class="icon solid fa-theater-masks">Merken dat bepaalde emoties te vaak de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
-										<li class="icon solid fa-laptop-house">De verhouding tussen werk en privé onder de loep nemen en over een andere boeg gooien.</li>
+										<li class="icon solid fa-laptop">De verhouding tussen werk en privé onder de loep nemen en over een andere boeg gooien.</li>
 										<li class="icon solid fa-map-signs">Weten dat je ergens anders heen wilt, maar (nog) niet goed weten waar of wat dat precies is.</li>
 										<li class="icon solid fa-user-friends">Beter/anders willen samenwerken met je collega’s.</li>
 										<li class="icon solid fa-child">Nadenken hoe je de relatie met je kinderen kan versterken.</li>
