--- a/index.html
+++ b/index.html
@@ -77,28 +77,20 @@
 						<!-- Three -->
 							<section id="waaromwildgroei">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>WAAROM WILDGROEI</h3>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Natuurlijk</h4>
+												<p>We zitten veel in ons hoofd en vergeten soms dat voelen en bewegen ook bij het leven hoort. Daarom staat wildgroei voor een vorm van coaching waar <b>natuur actief deel uitmaakt</b> van de sessies. De rustgevende en open omgeving creëert ruimte in je hoofd en door de beweging en interactie met de natuur wordt je brein gestimuleerd. Zo komen we makkelijker tot oplossingen en nieuwe inzichten.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Sociaal</h4>
+												<p>Wildgroei wil iedereen laten groeien en bouwt daarom op solidariteit vertaalt in <b>sociale tarieven</>. Bij een offerte of intake leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht, welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar wildgroei.</p>
 											</div>
 										</article>
 									</div>
