--- a/index.html
+++ b/index.html
@@ -96,11 +96,27 @@
 									</div>
 								</div>
 							</section>
-
+				
 						<!-- Four -->
 							<section id="verloop">
 								<div class="container">
-									<h3>Contact Me</h3>
+									<h3>VERLOOP</h3>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Verloop</h4>
+												<p></p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+						
+						<!-- Five -->
+							<section id="contact">
+								<div class="container">
+									<h3>Contact</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
@@ -118,7 +134,7 @@
 									</form>
 								</div>
 							</section>
-
+			
 						<!-- Five -->
 						<!--
 							<section id="contact">
