--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto:wildgroeicoaching@gmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
+						<li><a href="mailto:febe@wildgroeicoaching.be" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -117,21 +117,12 @@
 							<section id="contact">
 								<div class="container">
 									<h3>Contact</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<p>Febe - leerkracht, pedagoog, coach</p>
+									<ul class="feature-icons">
+										<li class="icon solid fa-phone">+32 472 57 68</li>
+										<li class="icon solid fa-email">febe@wildgroeicoaching.be</li>
+										<li><a href="#" class="icon brands fa-instagram">Volg ons op Instagram</li>
+									</ul>
 								</div>
 							</section>
 			
