--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-phone">+32 472 57 68</li>
 										<li class="icon solid fa-email">febe@wildgroeicoaching.be</li>
-										<li><a href="#" class="icon brands fa-instagram">Volg ons op Instagram</li>
+										<li class="icon brands fa-instagram">Volg ons op Instagram</li>
 									</ul>
 								</div>
 							</section>
