--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									<p>Febe - leerkracht, pedagoog, coach</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-phone">+32 472 57 68</li>
-										<li class="icon solid fa-email">febe@wildgroeicoaching.be</li>
+										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
 										<li class="icon brands fa-instagram">Volg ons op Instagram</li>
 									</ul>
 								</div>
