--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/logotest.jpg" alt="Studio Matta" /></span>
-					<p>Voor iedereen<br />
-					die wil groeien</p>
+					<h1 id="logo"><a href="#">Voor iedereen die wil groeien</a></h1>
 				</header>
 				<nav id="nav">
 					<ul>
