--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/logotest.jpg" alt="Studio Matta" /></span>
-					<h1 id="logo">Voor iedereen < /br>die wil groeien</h1>
+					Voor iedereen die wil groeien
 				</header>
 				<nav id="nav">
 					<ul>
