--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#intkort" class="active">In 't kort</a></li>
+						<li><a href="#voorwie">Voor wie</a></li>
+						<li><a href="#waaromwildgroei">Waarom Wildgroei</a></li>
+						<li><a href="#verloop">Verloop</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
