--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/Wildgroei-112961727721257/?ref=page_internal" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/Wildgroei-112961727721257/?ref=page_internal" target=”_blank” class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" target=”_blank” class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:febe@wildgroeicoaching.be" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
 					</ul>
 				</footer>
