--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="intkort">
 								<div class="image main" data-position="center">
 									<img src="images/wildgroeibanner.jpg" alt="" />
 								</div>
@@ -59,7 +59,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="voorwie">
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -75,7 +75,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="waaromwildgroei">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -106,7 +106,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="verloop">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -129,7 +129,7 @@
 
 						<!-- Five -->
 						<!--
-							<section id="five">
+							<section id="contact">
 								<div class="container">
 									<h3>Elements</h3>
 
