--- a/index.html
+++ b/index.html
@@ -59,16 +59,21 @@
 						<!-- Two -->
 							<section id="voorwie">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Voor wie</h3>
+									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast en energie. Voor iedereen die graag verandering wil in het leven.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-route">Vastzitten in een patroon en daaruit willen breken.</li>
+										<li class="icon solid fa-balance-scale-right">Anders leren omgaan met stress.</li>
+										<li class="icon solid fa-theater-masks">Merken dat bepaalde emoties te vaak de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
+										<li class="icon solid fa-laptop">De verhouding tussen werk en privé onder de loep nemen en over een andere boeg gooien.</li>
+										<li class="icon solid fa-map-signs">Weten dat je ergens anders heen wilt, maar (nog) niet goed weten waar of wat dat precies is.</li>
+										<li class="icon solid fa-user-friends">Beter/anders willen samenwerken met je collega’s.</li>
+										<li class="icon solid fa-child">Nadenken hoe je de relatie met je kinderen kan versterken.</li>
+										<li class="icon solid fa-paint-brush">Inzetten op wat jij belangrijk vindt en jouw talenten voeden.</li>
+										<li class="icon solid fa-heart">De liefde/passie (her)ontdekken in de relatie met je partner.</li>
+										<li class="icon solid fa-user-graduate">Je bent afgestudeerd, maar hebt geen idee wat je nu wil doen.</li>
 									</ul>
+									<p>Kortom, alles waar je iets meer, minder of anders van wil.</p>
 								</div>
 							</section>
 
