--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 							<section id="voorwie">
 								<div class="container">
 									<h3>Voor wie</h3>
-									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast en energie. Voor iedereen die graag verandering wil in het leven.</p>
+									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast en energie. Wil je graag verandering in je leven en zijn een of meerdere van onderstaande situaties herkenbaar voor je, dan is wildgroei iets voor jou!</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-route">Vastzitten in een patroon en daaruit willen breken.</li>
 										<li class="icon solid fa-balance-scale-right">Anders leren omgaan met stress.</li>
-										<li class="icon solid fa-theater-masks">Merken dat bepaalde emoties te vaak de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
+										<li class="icon solid fa-theater-masks">Merken dat bepaalde emoties (te vaak) de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
 										<li class="icon solid fa-laptop">De verhouding tussen werk en privé onder de loep nemen en over een andere boeg gooien.</li>
 										<li class="icon solid fa-map-signs">Weten dat je ergens anders heen wilt, maar (nog) niet goed weten waar of wat dat precies is.</li>
 										<li class="icon solid fa-user-friends">Beter/anders willen samenwerken met je collega’s.</li>
