--- a/index.html
+++ b/index.html
@@ -101,29 +101,35 @@
 							</section>
 
 						<!-- Four -->
+						<!--
 							<section id="verloop">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
+									<h3>VERLOOP</h3>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Verloop</h4>
+												<p></p>
 											</div>
-										</div>
-									</form>
+										</article>
+									</div>
 								</div>
 							</section>
-
+-->
 						<!-- Five -->
-						<!--
+							<section id="contact">
+								<div class="container">
+									<h3>Contact</h3>
+									<p>Febe - leerkracht, pedagoog, coach</p>
+									<ul class="feature-icons">
+										<li class="icon solid fa-phone">+32 472 57 68</li>
+										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
+										<li class="icon brands fa-instagram">Volg ons op Instagram</li>
+									</ul>
+								</div>
+							</section>
+			<!--
 							<section id="contact">
 								<div class="container">
 									<h3>Elements</h3>
