--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<li class="icon solid fa-phone">+32 472 57 68</li>
 										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
 										<li class="icon brands fa-instagram">Volgen op Instagram</li>
-										<li><a href="https://www.facebook.com/Wildgroei-112961727721257" target=”_blank” class="icon brands fa-facebook">Facebook</a></li>
+										<li class="icon brands fa-facebook"><a href="https://www.facebook.com/Wildgroei-112961727721257" target=”_blank”>Facebook</a></li>
 									</ul>
 								</div>
 							</section>
