--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-phone">+32 472 57 68</li>
 										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
-										<li class="icon brands fa-instagram">Volgen op Instagram</li>
+										<li class="icon brands fa-instagram">Instagram</li>
 										<li class="icon brands fa-facebook"><a href="https://www.facebook.com/Wildgroei-112961727721257" target=”_blank”>Facebook</a></li>
 									</ul>
 								</div>
