--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<section id="voorwie">
 								<div class="container">
 									<h3>Voor wie</h3>
-									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast en energie. Wil je graag verandering in je leven en zijn een of meerdere van onderstaande situaties herkenbaar voor je, dan is wildgroei iets voor jou!</p>
+									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast en energie. Wil je graag verandering in je leven en zijn een of meerdere van onderstaande situaties herkenbaar voor je, dan is Wildgroei zeker iets voor jou!</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-route">Vastzitten in een patroon en daaruit willen breken.</li>
 										<li class="icon solid fa-balance-scale-right">Anders leren omgaan met stress.</li>
