--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 											<a href="#" class="image"><img src="images/wandelen.jpg" alt="Wildgroei" /></a>
 											<div class="inner">
 												<h4>Sociaal</h4>
-												<p>Wildgroei wil iedereen laten groeien en bouwt daarom op solidariteit vertaald in <b>sociale tarieven</b>. Bij een offerte of intake leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar wildgroei.</p>
+												<p>Wildgroei wil iedereen laten groeien en bouwt daarom op solidariteit vertaald in <b>sociale tarieven</b>. Bij een offerte of intake leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar Wildgroei.</p>
 											</div>
 										</article>
 									</div>
