--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="#intkort" class="active">In 't kort</a></li>
 						<li><a href="#voorwie">Voor wie</a></li>
 						<li><a href="#waaromwildgroei">Waarom Wildgroei</a></li>
-						<li><a href="#verloop">Verloop</a></li>
+					<!--	<li><a href="#verloop">Verloop</a></li> -->
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
