--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<header class="major">
 										<h3>In 't kort</h3>
 									</header>
-									<p>Als kind spelen we vaak, in het wild, en hebben we weinig tot geen zorgen. Met ouder worden temmen we onszelf en staan we vaker stil bij wat op ons pad komt. We verliezen onszelf in dingen die ons zorgen baren, dilemma’s die ons voor moeilijke keuzes zetten en zaken die ons uitdagen en soms vastzetten. Wildgroei wil daarom samen op pad gaan. Op zoek naar een alternatieve route. Wildgroei ondersteunt je om jezelf terug te vinden zodat je vrij, af en toe wild, maar warm en vanuit het hart kan ontdekken waar jouw speelruimte ligt en je kan groeien in het leven.</p>
+									<p>Als kind spelen we vaak, in het wild, en hebben we weinig tot geen zorgen. Met ouder worden temmen we onszelf en staan we vaker stil bij wat op ons pad komt. We verliezen onszelf in dingen die ons zorgen baren, dilemma’s die ons voor moeilijke keuzes zetten en zaken die ons uitdagen en soms vastzetten.</p><p>Wildgroei wil samen op pad gaan. Op zoek naar een alternatieve route. Wildgroei ondersteunt je om jezelf terug te vinden zodat je vrij, af en toe wild, maar warm en vanuit het hart kan ontdekken waar jouw speelruimte ligt en je kan groeien in het leven.</p>
 								</div>
 							</section>
 
