--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/logotest.jpg" alt="Studio Matta" /></span>
+					<span class="image avatar"><img src="images/logogroen.jpg" alt="Studio Matta" /></span>
 					<p>Voor iedereen </br>die wil groeien</br></p>
 				</header>
 				<nav id="nav">
