--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/Wildgroei-112961727721257" target=”_blank” class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" target=”_blank” class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/Wildgroei-112961727721257/" target=”_blank” class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/wildgroei_coaching/" target=”_blank” class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:febe@wildgroeicoaching.be" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
 					</ul>
 				</footer>
@@ -125,7 +125,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-phone">+32 472 57 68</li>
 										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
-										<li class="icon brands fa-instagram">Instagram</li>
+										<li class="icon brands fa-instagram"><a href="https://www.instagram.com/wildgroei_coaching/" target="_blank">Instagram</a></li>
 										<li class="icon brands fa-facebook"><a href="https://www.facebook.com/Wildgroei-112961727721257" target=”_blank”>Facebook</a></li>
 									</ul>
 								</div>
