--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- One -->
 							<section id="intkort">
 								<div class="image main" data-position="center">
-									<img src="images/wildgroeibanner.jpg" alt="Wildgroei" />
+									<img src="images/springen.jpg" alt="Wildgroei" />
 								</div>
 								<div class="container">
 									<header class="major">
