--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/logooranje.jpg" alt="Studio Matta" /></span>
-					<p>- Voor iedereen die wil groeien -</br></p>
+					<p>- voor iedereen die wil groeien -</br></p>
 				</header>
 				<nav id="nav">
 					<ul>
