--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 										<li class="icon solid fa-paint-brush">Inzetten op wat jij belangrijk vindt en jouw talenten voeden.</li>
 										<li class="icon solid fa-heart">De liefde/passie (her)ontdekken in de relatie met je partner.</li>
 										<li class="icon solid fa-user-graduate">Je bent afgestudeerd, maar hebt geen idee wat je nu wil doen.</li>
+										<li class="icon solid fa-infinity">...</li>										
 									</ul>
 									<p>Kortom, alles waar je iets meer, minder of anders van wil.</p>
 								</div>
