--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 									<h3>Voor wie</h3>
 									<p>Wildgroei is er voor iedereen die behoefte heeft aan wat ademruimte, houvast of energie. Wil je graag verandering in je leven en zijn een of meerdere van onderstaande situaties herkenbaar, dan is Wildgroei zeker iets voor jou!</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-route">Vastzitten in een patroon en daaruit willen breken.</li>
-										<li class="icon solid fa-balance-scale-right">Anders leren omgaan met stress.</li>
-										<li class="icon solid fa-theater-masks">Merken dat bepaalde emoties (te vaak) de bovenhand nemen en op zoek gaan naar meer evenwicht.</li>
-										<li class="icon solid fa-laptop">De verhouding tussen werk en privé onder de loep nemen en over een andere boeg gooien.</li>
-										<li class="icon solid fa-map-signs">Weten dat je ergens anders heen wilt, maar (nog) niet goed weten waar of wat dat precies is.</li>
-										<li class="icon solid fa-user-friends">Beter/anders willen samenwerken met je collega’s.</li>
-										<li class="icon solid fa-child">Nadenken hoe je de relatie met je kinderen kan versterken.</li>
-										<li class="icon solid fa-paint-brush">Inzetten op wat jij belangrijk vindt en jouw talenten voeden.</li>
-										<li class="icon solid fa-heart">De liefde/passie (her)ontdekken in de relatie met je partner.</li>
+										<li class="icon solid fa-route">Je zit vast in een patroon en wil eruit breken.</li>
+										<li class="icon solid fa-balance-scale-right">Je wil anders leren omgaan met stress.</li>
+										<li class="icon solid fa-theater-masks">Je merkt dat bepaalde emoties (te vaak) de bovenhand nemen en zoekt naar evenwicht.</li>
+										<li class="icon solid fa-laptop">Je wil de verhouding tussen werk en privé onder de loep nemen.</li>
+										<li class="icon solid fa-map-signs">Je weet dat je ergens anders heen wil, maar (nog) niet goed waar of wat dat precies is.</li>
+										<li class="icon solid fa-user-friends">Je wil beter of anders samenwerken met je collega’s.</li>
+										<li class="icon solid fa-child">Je wil de relatie met je kinderen versterken.</li>
+										<li class="icon solid fa-paint-brush">Je wil inzetten op wat je belangrijk vindt en jouw talenten (h)erkennen.</li>
+										<li class="icon solid fa-heart">Je wil de liefde/passie (her)ontdekken in de relatie met je partner.</li>
 										<li class="icon solid fa-user-graduate">Je bent afgestudeerd, maar hebt geen idee wat je nu wil doen.</li>
 										<li class="icon solid fa-infinity">...</li>										
 									</ul>
