--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 											<a href="#" class="image"><img src="images/vaart.jpg" alt="Wildgroei" /></a>
 											<div class="inner">
 												<h4>Natuurlijk</h4>
-												<p>We zitten veel in ons hoofd en vergeten soms dat voelen en bewegen ook bij het leven hoort. Daarom staat wildgroei voor een vorm van coaching waar <b>natuur actief deel uitmaakt</b> van de sessies. De rustgevende en open omgeving creëert ruimte in je hoofd en door de beweging en interactie met de natuur wordt je brein gestimuleerd. Zo komen we makkelijker tot oplossingen en nieuwe inzichten.</p>
+												<p>We zitten veel in ons hoofd en vergeten soms dat voelen en bewegen ook bij het leven hoort. Daarom staat Wildgroei voor een vorm van coaching waar <b>natuur actief deel uitmaakt</b> van de sessies. De rustgevende en open omgeving creëert ruimte in je hoofd en door de beweging en interactie met de natuur wordt je brein gestimuleerd. Zo komen we makkelijker tot oplossingen en nieuwe inzichten.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/wandelen.jpg" alt="Wildgroei" /></a>
 											<div class="inner">
 												<h4>Sociaal</h4>
-												<p>Wildgroei wil iedereen laten groeien en bouwt daarom op solidariteit vertaald in <b>sociale tarieven</b>. Bij een offerte of intake leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar Wildgroei.</p>
+												<p>Wildgroei wil <b>iedereen</b> laten groeien en bouwt daarom op solidariteit die zich vertaalt in <b>sociale tarieven</b>. Bij een offerte of intake leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar Wildgroei.</p>
 											</div>
 										</article>
 									</div>
