--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 											<a href="#" class="image"><img src="images/wandelen.jpg" alt="Wildgroei" /></a>
 											<div class="inner">
 												<h4>Sociaal</h4>
-												<p>Wildgroei wil <b>iedereen</b> laten groeien en bouwt daarom op solidariteit die zich vertaalt in <b>sociale tarieven</b>. Bij een offerte of intake leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar Wildgroei.</p>
+												<p>Wildgroei wil <b>iedereen</b> laten groeien en bouwt daarom op solidariteit die zich vertaalt in <b>sociale tarieven</b>. <a href="#contact">Telefonisch</a> of via <a href="#contact">e-mail</a> leg ik het systeem en de richtprijzen voor. Daarna bepaal je op basis van je financiële draagkracht welke prijs voor jou de ‘juiste prijs’ is. Dit kies je zelf of in samenspraak met mij. Op deze manier vinden mensen die niet bij een coach raken misschien toch hun weg naar Wildgroei.</p>
 											</div>
 										</article>
 									</div>
