--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 								<div class="container">
 									<h3>Contact</h3>
 									<p>Febe - leerkracht, pedagoog, coach</p>
-									<ul class="feature-icons">
+										<a href="#" class="image"><img src="images/portret.jpg" alt="Wildgroei" /></a>									
+										<ul class="feature-icons">
 										<li class="icon solid fa-phone">+32 472 57 68</li>
 										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
 										<li class="icon brands fa-instagram"><a href="https://www.instagram.com/wildgroei_coaching/" target="_blank">Instagram</a></li>
