--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<a href="#" class="image"><img src="images/portret.jpg" alt="Wildgroei" /></a>									
 										<ul class="feature-icons">
 										<li class="icon solid fa-phone">+32 472 57 68</li>
-										<li class="icon solid fa-envelope">febe@wildgroeicoaching.be</li>
+										<li class="icon solid fa-envelope">febe{@}wildgroeicoaching.be</li>
 										<li class="icon brands fa-instagram"><a href="https://www.instagram.com/wildgroei_coaching/" target="_blank">Instagram</a></li>
 										<li class="icon brands fa-facebook"><a href="https://www.facebook.com/Wildgroei-112961727721257" target=”_blank”>Facebook</a></li>
 									</ul>
