--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<div class="container">
 									<h3>Contact</h3>
 									<section>
-										<h4>Febe - leerkracht, pedagoog, coach</h4>
+										<p>Febe - leerkracht, pedagoog, coach</p>
 										<div class="box alt">
 											<div class="row gtr-50 gtr-uniform">
 											<div class="col-4"><span class="image fit"><img src="images/portret.jpg" alt="" /></span></div>
